Fixes crazy jump on slide new experience form.

--- a/app/assets/stylesheets/_elements.sass
+++ b/app/assets/stylesheets/_elements.sass
@@ -20,3 +20,6 @@ h1, h2
 
 h1
   font-size: 1.8rem
+
+[data-hide="true"]
+  display: none
