--- a/app/assets/stylesheets/components/_components.sass
+++ b/app/assets/stylesheets/components/_components.sass
@@ -30,7 +30,6 @@
   a
     @extend %invite-button
   
-
 .top-border
   height: 3px
   position: fixed
@@ -71,9 +70,6 @@
         background-color: nth($flash-color, 2)
   &:hover
     cursor: pointer
-
-[data-hide="true"]
-  display: none
 
 /** Utility bar */
 
